--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>1.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.128</jenkins.version>
+        <jenkins.version>2.131-SNAPSHOT</jenkins.version>
         <java.level>8</java.level>
     </properties>
     <name>Login Theme Plugin</name>
